--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "@expo/vector-icons": "^6.3.0",
     "expo": "^25.0.0",
     "react": "16.2.0",
-    "react-native":
-      "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
-    "react-native-keyboard-aware-scroll-view": "^0.4.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
+    "react-native-keyboard-aware-scroll-view": "^0.4.4",
     "react-navigation": "1.0.0-beta.27",
     "react-navigation-redux-helpers": "^1.0.1",
     "react-redux": "5.0.6",
@@ -69,7 +68,12 @@
   },
   "jest": {
     "preset": "react-native",
-    "moduleFileExtensions": ["ts", "tsx", "js", "json"],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json"
+    ],
     "transform": {
       "^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
       "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
