--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.4.4",
     "react-navigation": "1.0.0-beta.27",
     "react-navigation-redux-helpers": "^1.0.1",
-    "react-redux": "5.0.6",
+    "react-redux": "^5.0.7",
     "redux": "3.7.2",
     "redux-persist": "5.4.0",
     "redux-thunk": "2.2.0",
